fix:the merg problem

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "fix-unused": "node fix-unused-vars.js",
     "preview": "vite preview",
     "start": "vite --open"
   },
