--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "react-router-dom": "^6.30.0",
     "vite": "^6.3.1"
   },
-  
+    "scripts": {
+    "build": "your-build-command",
+    "lint": "eslint .",
+    "test": "echo \"No tests configured\" && exit 0"
+  }
 
 }
 
